[package]
name = "baremetal_hypervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
strip = true

[features]
default = []
bsp_generic = []

arch_x86_64 = []

[dependencies]
bitfield = "0.14.0"